--- a/example/debug.html
+++ b/example/debug.html
@@ -65,7 +65,7 @@
       type: 'XY',
       charts: {
         line: {type: 'Line', dataKey: 'increasing-dense', labels: true},
-        labels: {type: 'Labels', anchor: 'end'}
+        labels: {type: 'Labels'}
       },
       axes: {
         x: {scale: {domain: [0, 50]}, position: 'top', title: 'Howdy'}
