Include class for bars

--- a/example/index.html
+++ b/example/index.html
@@ -22,6 +22,9 @@
     .example-chart {
       margin-top: 10px;
     }
+    .highlighted {
+      fill: #2ca02c;
+    }
   </style>
 
   <script src="../bower_components/d3/d3.js"></script>
